# server/src/app/modules/payment/payment.routes.ts
@@ -1,5 +1,8 @@
-import { Router } from 'express';
-import { createPaymentIntentController } from '@/app/modules/payment/payment.controllers';
+import { Router, raw } from 'express';
+import {
+  createPaymentIntentController,
+  paymentWebhookController,
+} from '@/app/modules/payment/payment.controllers';
 import {
   checkAccountStatus,
   checkUserAccessTokenMiddleware,
@@ -25,5 +28,11 @@ router
     checkPaymentOrderValidityMiddleware,
     createPaymentIntentController
   );
+
+router.post(
+  '/webhooks/payment/stripe',
+  raw({ type: 'application/json' }),
+  paymentWebhookController
+);
 
 export default router;
